--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
     {% endif %}
   {% endfor %}
 
-  <p>{{ post.content }} {{ post.date | date: "%B %Y" }}</p>
+  <p>{{ post.content }}</p>
 </article>
 {% endunless %}
 {% endfor %}
