--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@ layout: default
 <article class="article">
   {% assign images = post.images %}
 
-
   {% if images.size > 1 %}
   <div class="carousel">
   {% endif %}
@@ -31,7 +30,7 @@ layout: default
   </div>
   {% endif %}
 
-  <p>{{ post.content }}</p>
+  <div class="caption">{{ post.content }}</div>
 </article>
 {% endunless %}
 {% endfor %}
