--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ layout: default
       <img src="{{ image }}" alt=""/>
       {% else %}
         {% if site.env == 'production' or jekyll.environment == "production" %}
-        <img src="{{ image | prepend: image_asset_path | prepend: site.baseurl }}" alt=""/>
+        <img src="{{ image | prepend: image_asset_path | prepend: site.baseurl | append: '_1080.jpg' }}" alt=""/>
         {% else %}
-        <img src="{{ image | prepend: image_asset_path }}" alt=""/>
+        <img src="{{ image | prepend: image_asset_path | append: '_1080.jpg' }}" alt=""/>
         {% endif %}
       {% endif %}
     </div>
