--- a/index.html
+++ b/index.html
@@ -9,26 +9,33 @@ layout: default
   {% assign images = project.images %}
 
   {% if images.size > 1 %}
-  <div class="carousel">
-  {% endif %}
 
+  <div class="carousel">
     {% for image in images %}
     <div class="carousel-cell">
       {% if image contains "http://" or image contains "https://" %}
       <img src="{{ image }}" alt=""/>
       {% else %}
         {% if site.env == 'production' or jekyll.environment == "production" %}
-        <img src="{{ image | prepend: image_asset_path | prepend: site.baseurl | append: '_1080.jpg' }}" alt=""/>
+        <img data-flickity-lazyload="{{ image | prepend: image_asset_path | prepend: site.baseurl | append: '_1080.jpg' }}" alt=""/>
         {% else %}
-        <img src="{{ image | prepend: image_asset_path | append: '_1080.jpg' }}" alt=""/>
+        <img data-flickity-lazyload="{{ image | prepend: image_asset_path | append: '_1080.jpg' }}" alt=""/>
         {% endif %}
       {% endif %}
     </div>
     {% endfor %}
-
-  {% if images.size > 1 %}
   </div>
+
+  {% else %}
+    {% for image in images %}
+      {% if site.env == 'production' or jekyll.environment == "production" %}
+      <img src="{{ image | prepend: image_asset_path | prepend: site.baseurl | append: '_1080.jpg' }}" alt=""/>
+      {% else %}
+      <img src="{{ image | prepend: image_asset_path | append: '_1080.jpg' }}" alt=""/>
+      {% endif %}
+    {% endfor %}
   {% endif %}
+
 
   <div class="caption">{{ project.content }}</div>
 </article>
