--- a/index.html
+++ b/index.html
@@ -1,43 +1,6 @@
 ---
-layout: default
+layout: projects
 ---
-{% assign image_asset_path = '/uploads/'%}
-{% assign projects = site.projects | sort:"weight" %}
-{% for project in projects %}
-{% unless project.draft %}
-<article class="article">
-  {% assign images = project.images %}
 
-  {% if images.size > 1 %}
-
-  <div class="carousel">
-    {% for image in images %}
-    <div class="carousel-cell">
-      {% if image contains "http://" or image contains "https://" %}
-      <img src="{{ image }}" alt=""/>
-      {% else %}
-        {% if site.env == 'production' or jekyll.environment == "production" %}
-        <img data-flickity-lazyload="{{ image | prepend: image_asset_path | prepend: site.baseurl | append: '_1080.jpg' }}" alt=""/>
-        {% else %}
-        <img data-flickity-lazyload="{{ image | prepend: image_asset_path | append: '_1080.jpg' }}" alt=""/>
-        {% endif %}
-      {% endif %}
-    </div>
-    {% endfor %}
-  </div>
-
-  {% else %}
-    {% for image in images %}
-      {% if site.env == 'production' or jekyll.environment == "production" %}
-      <img src="{{ image | prepend: image_asset_path | prepend: site.baseurl | append: '_1080.jpg' }}" alt=""/>
-      {% else %}
-      <img src="{{ image | prepend: image_asset_path | append: '_1080.jpg' }}" alt=""/>
-      {% endif %}
-    {% endfor %}
-  {% endif %}
-
-
-  <div class="caption">{{ project.content }}</div>
-</article>
-{% endunless %}
-{% endfor %}
+Dominic Santos (b. 1985, San Francisco) is a multidisciplinary artist and director based in Los Angeles.
+All inquiries: info@dominicsantos.com  Instagram: @dompatrol.
