--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: projects
 ---
 
-Dominic Santos (b. 1985, San Francisco) is a multidisciplinary artist and director based in Los Angeles.
+Dominic Santos (b. 1985) is a multidisciplinary artist and director based in Los Angeles.
 All inquiries: info@dominicsantos.com  Instagram: @dompatrol.
