Add safe e-mail anchor

--- a/index.html
+++ b/index.html
@@ -3,4 +3,11 @@ layout: projects
 ---
 
 Dominic Santos (b. 1985) is a multidisciplinary artist and director based in Los Angeles.
-All inquiries: info@dominicsantos.com  Instagram: @dompatrol.
+All inquiries:
+<script type="text/javascript">
+  var b = '@';
+  document.write('<a href="mail'+'to:info'+b+'dominicsantos.com">');
+  document.write('info'+b+'dominicsantos.com');
+  document.write('</a>');
+</script>
+ Instagram: <a href="https://instagram.com/dompatrol">dompatrol</a>
