--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: projects
 ---
 
-Dominic Santos (b. 1985) is a multidisciplinary artist and director based in Los Angeles.
+Dominic Santos (b. 1985) is a multidisciplinary artist and director based in Los Angeles.<br>
 All inquiries:
 <script type="text/javascript">
   var b = '@';
