--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: projects
 ---
 
-Dominic Santos (b. 1985) is a multidisciplinary artist and director based in Los Angeles.<br>
+Dominic Santos (b. 1985) is a multidisciplinary artist and director based in Los Angeles.<br><br>
 All inquiries:
 <script type="text/javascript">
   var b = '@';
@@ -10,4 +10,4 @@ All inquiries:
   document.write('info'+b+'dominicsantos.com');
   document.write('</a>');
 </script>
- Instagram: <a href="https://instagram.com/dompatrol">dompatrol</a>
+ Instagram: <a href="https://instagram.com/dompatrol">@dompatrol</a>
