--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: projects
-
 ---
-Dominic Santos (b. 1985) is a multidisciplinary artist and director based in Los Angeles.<br><br>
+
+Los Angeles based artist Dominic Santos’s practice emphasises ephemeral and  mystical elements in sculptural designs and multidisciplinary explorations of light projection and collage. Often working in collaboration with live musicians, abstract compositions are explored performatively through the reworking of colored acetate and found materials over analog slide projectors.
+<br><br>
 All inquiries:
 <script type="text/javascript">
   var b = '@';
