Add rel=noreferrer attribute

--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@ All inquiries:
   document.write('info'+b+'dominicsantos.com');
   document.write('</a>');
 </script>
- Instagram: <a href="https://instagram.com/dompatrol">@dompatrol</a>
+ Instagram: <a rel="noreferrer" href="https://instagram.com/dompatrol">@dompatrol</a>
