--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 layout: projects
 
 ---
-Dominic Santos is a Los Angeles based multi-disciplinary artist who emphasizes ephemeral light-play while utilizing collage, found materials, sculptural design, and video. Often working in collaboration with live musicians, abstract compositions are explored performatively through the reworking of colored acetate over analog slide projectors. 
+Dominic Santos is a visual artist, creative director, and design consultant.
+<br>
+Connecting people with art, design, light and space to create community and atmosphere.
+<br>
+Services – creative direction, visual identity, lighting design, spatial design, photography + video direction
 <br><br>
 All inquiries:
 <script type="text/javascript">
@@ -11,4 +15,4 @@ All inquiries:
   document.write('info'+b+'dominicsantos.com');
   document.write('</a>');
 </script>
- Instagram: <a rel="noreferrer" href="https://instagram.com/dompatrol">@dompatrol</a>
+ <br/>Instagram: <a rel="noreferrer" href="https://instagram.com/dompatrol">@dompatrol</a>
