Add profile image

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: projects
 
 ---
+
+<img style="width:420px;padding-bottom:3em" src="/uploads/dominic_santos_slide_1080.jpg">
+
 Dominic Santos is a visual artist, creative director, and design consultant.
 <br>
 Connecting people with art, design, light and space to create community and atmosphere.
