--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ layout: projects
 
 <img style="width:420px;padding-bottom:3em" src="/uploads/dominic_santos_slide_1080.jpg">
 
-Dominic Santos is a visual artist, creative director, and design consultant.
-<br>
-Connecting people with art, design, light and space to create community and atmosphere.
-<br>
-Services – creative direction, visual identity, lighting design, spatial design, photography + video direction
+Dominic Santos is a visual artist, creative director, and design consultant
+<br><br>
+connecting people with art, design, light and nature to create community and atmosphere
+<br><br>
+services – creative direction, visual identity, lighting + event design, spatial design, photography + video direction
 <br><br>
 All inquiries:
 <script type="text/javascript">
